tests/sources/invalid/borrow/borrow_escape_projection_errors.fire
// Borrow-escape through direct projections

import @firescript/std.io.println;

class Box {
    string name;
}

string badFieldReturn(&Box b) {
    return b.name; // Error: direct borrowed projection escapes  //~ ERROR FS-SEM-0001 @14
}

string[] badArrayReturn(&string[] arr) {
    return arr; // Error: returning borrowed array escapes  //~ ERROR FS-SEM-0001 @12
}

string[] values = ["a", "b"];
Box bx = Box("fire");
println(badFieldReturn(bx));
println(badArrayReturn(values).length());
